--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: QuestTrain Blog
-email: hello@woddle.io
+email: hello@questtrain.com
 description: >- # this means to ignore newlines until "baseurl:"
   Making questions cool since '21
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://blog.woddle.io" #         poetry --version the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mjvogelsong.github.io/questtrain-blog" #         poetry --version the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
