--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: hello@questtrain.com
 description: >- # this means to ignore newlines until "baseurl:"
   Making questions cool since '21
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://mjvogelsong.github.io/questtrain-blog" #         poetry --version the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.questtrain.com" #         poetry --version the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
